
  Non-API Changes:
  - ObjectAttributes: utility data structure to manage additional attributes for existing objects (r14189)
  - SignalModelFactory now also has a createSignalPlan(...) method for SignalPlans (r14143)
  - SignalScenarioLoader is not producing null pointer exceptions anymore if files are not set in config group (r14142)
  - improved withinday-package available (r14364)




Release Fall 2010 (version 0.2.0)
-------------------------------------------------------------------------------

Main focus of this release:
Simulation of public transport, Improvements to OTFVis, Code cleanup


Changes:

- New features:
  - OTFVis (org.matsim.run.OTFVis) can now be started in Swing mode (-swing).
    In Swing-Mode, no OpenGL is required, but only very limited capabilities
    are available (Network-Viewing, simple visualization of vehicles)
  - NetVis was removed from MATSim, use OTFVis in Swing mode instead.
  - Simulation of public transport possible
    see tutorial on http://matsim.org/docs/tutorials/transit

- Feature improvements:
  - improved stability of OsmNetworkReader to convert networks from OpenStreetMap
  - Swing-OTFVis can open mvi-files created by conversion from events

- Other changes for developers:

  API-Changes:
  - ScenarioImpl.getPopulation() returns Population instead of PopulationImpl (r11288)
  - A bunch of classes no longer implement or extend Serializable, mostly for Network and Population data structure (r11637, r11638, r11650 - r11653, r11655)
  - remove no longer supported config parameters (r11975, <http://sourceforge.net/mailarchive/forum.php?thread_name=F3A57F88000BEE4FBC74E5DC0562E8D987E9CF%40axonlu-msvr2.teledata.local&forum_name=matsim-devel>)
  - Use String instead of enum TransportMode for specifying modes of transportation (r11985, r11987)

  Non-API Changes:
  - QVehicle.getBasicVehicle() has been renamed to QVehicle.getVehicle()
  - org.matsim.withinday removed completely